--- a/Singular Value Decomposition.ipynb
+++ b/Singular Value Decomposition.ipynb
@@ -10,9 +10,7 @@
         "AI8iUPuAgW34",
         "VLyHpP9GcNI8",
         "ZecYlb32aPRG",
-        "7Gnr6yC9VqxW",
-        "HRZ_GFV1mFpU",
-        "EvIXZS7b6KBx"
+        "7Gnr6yC9VqxW"
       ],
       "machine_shape": "hm",
       "include_colab_link": true
@@ -53,9 +51,9 @@
         "colab_type": "text"
       },
       "source": [
-        "MovieLens Recommendations - Singular Value Decomposition\n",
+        "MovieLens Recommendations - Dean Shabi, Dedi Kovatch, July 2019\n",
         "=============================================\n",
-        "## Dean Shabi, Dedi Kovatch, July 2019\n",
+        "\n",
         "## Final Project for TCDS - Technion Data Science Specialization\n",
         "\n",
         "MovieLens data sets were collected by the GroupLens Research Project\n",
@@ -1219,19 +1217,6 @@
           "execution_count": 3
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "D5bitR2D7fzC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2911,26 +2896,13 @@
       "metadata": {
         "id": "8c3WNh_VmFp-",
         "colab_type": "code",
-        "outputId": "f8a6a82f-163f-4e79-d16a-4c6725dd92ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        }
+        "colab": {}
       },
       "source": [
         "already_rated, predictions = recommend_movies(preds_df, 25, movies_df, ratings_df, 10)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User 25 has already rated 26 movies.\n",
-            "Recommending highest 10 predicted ratings movies not already rated.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3306,11 +3278,7 @@
       "metadata": {
         "id": "yAIh_rA5pQSM",
         "colab_type": "code",
-        "outputId": "1a6652a0-1b29-4c7b-acb3-81941c326e28",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 244
-        }
+        "colab": {}
       },
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
@@ -3332,19 +3300,7 @@
         "mae = mean_absolute_error(test[\"rating\"], pred)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-101-45323c23b8b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmovielens18\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m svd = SVD(learning_rate=0.01, regularization=0.1, n_epochs=100,\n\u001b[0m\u001b[1;32m     12\u001b[0m           n_factors=80, min_rating=1, max_rating=5)\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'SVD' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3452,45 +3408,6 @@
         "\n",
         "pivot_test = test_df.pivot_table(values = 'rating', index = 'movie_id', columns = 'user_id')\n",
         "pivot_test.fillna(0, inplace = True)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "28ahHbr06KCH",
-        "colab": {}
-      },
-      "source": [
-        "pivot_train.shape, pivot_test.shape"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "tR1ug55T6KCL",
-        "colab": {}
-      },
-      "source": [
-        "pivot_train.head()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "9U_hAE_b6KCO",
-        "colab": {}
-      },
-      "source": [
-        "pivot_test.head(5)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -4194,8 +4111,12 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "outputId": "6a100e6c-8d90-4763-a3a2-b6ec62e5340d",
         "id": "Rt5Z3Cc_l1Cr",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "R = R_df.as_matrix()\n",
@@ -4211,7 +4132,16 @@
         "    Ynorm[i, idx] = R[i, idx] - Ymean[i]    "
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4289,6 +4219,19 @@
       },
       "source": [
         "results = pd.DataFrame(columns=['RMSE', 'MAE','K'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dYt30XeMp2rU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pivot_train"
       ],
       "execution_count": 0,
       "outputs": []
@@ -4951,6 +4894,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "cRQPFM4FymUX",
+        "colab_type": "code",
+        "outputId": "e9097c01-4c5c-4026-c172-e9ed96ca409f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "sum(test_df.rating_predicted.isna())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "f4TAkr_AoG6s",
         "colab_type": "code",
         "outputId": "09aaca05-4f91-430d-88b3-6416b65c915a",
@@ -5008,7 +4981,7 @@
       "source": [
         "**The results are pretty bad (too bad, random model givs 1.5 RMSE)..**\n",
         "\n",
-        "We think there's a normalization factor we didn't account for, since the recomendations are okay.\n"
+        "We think there's a normalization factor we didn't account for, since the recomendations are okay."
       ]
     }
   ]
