--- a/Singular Value Decomposition.ipynb
+++ b/Singular Value Decomposition.ipynb
@@ -54,7 +54,7 @@
         "MovieLens Recommendations - Dean Shabi, Dedi Kovatch, July 2019\n",
         "=============================================\n",
         "\n",
-        "## Final Project for TCDS - Technion Data Science Specialization\n",
+        "## Final Project for TCDS - Technion Data Science Specialization. \n",
         "\n",
         "MovieLens data sets were collected by the GroupLens Research Project\n",
         "at the University of Minnesota.\n",
